fixed a small error with too big chars

--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ body{
     font-size: 12px;
 }
 .author{
-    font-size: 16px;
-    float: left;
+    font-size: 14px;
+
     margin: auto;
 }
 .icons{
